--- a/pgjdbc/pom.xml
+++ b/pgjdbc/pom.xml
@@ -10,8 +10,8 @@
   <artifactId>postgresql</artifactId>
   <packaging>bundle</packaging>
   <name>PostgreSQL JDBC Driver - JDBC 4.2</name>
-  <version>42.2.4</version>
-  <description>Java JDBC 4.2 (JRE 8+) driver for PostgreSQL database</description>
+  <version>42.2.4_2ndq_r1_1</version>
+  <description>Java JDBC 4.2 (JRE 8+) driver for PostgreSQL database with 2ndQuadrant patches</description>
   <url>https://github.com/pgjdbc/pgjdbc</url>
 
   <licenses>
