--- a/pgjdbc/pom.xml
+++ b/pgjdbc/pom.xml
@@ -7,12 +7,14 @@
     <relativePath />
   </parent>
 
-  <artifactId>postgresql</artifactId>
+  <!-- If you change this you must change the top-level directory pom.xml too -->
+  <groupId>com.2ndQuadrant</groupId>
+  <artifactId>2ndQPostgres-jdbc</artifactId>
   <packaging>bundle</packaging>
-  <name>PostgreSQL JDBC Driver - JDBC 4.2</name>
-  <version>42.2.4_2ndq_r1_1</version>
-  <description>Java JDBC 4.2 (JRE 8+) driver for PostgreSQL database with 2ndQuadrant patches</description>
-  <url>https://github.com/pgjdbc/pgjdbc</url>
+  <name>2ndQPostgres JDBC Driver - JDBC 4.2</name>
+  <version>42.2.4.1</version>
+  <description>Java JDBC 4.2 (JRE 8+) driver for 2ndQPostgres database</description>
+  <url>https://github.com/2ndQuadrant/pgjdbc</url>
 
   <licenses>
     <license>
@@ -22,8 +24,8 @@
   </licenses>
 
   <organization>
-    <name>PostgreSQL Global Development Group</name>
-    <url>https://jdbc.postgresql.org/</url>
+    <name>2ndQuadrant</name>
+    <url>https://2ndquadrant.com/</url>
   </organization>
 
   <properties>
