Tidy up the Travis build script a little
The Travis build script added to a profiles list in some places,
and in other places ignored/overrode that list, amongst other minor
issues. Tidy.

--- a/.travis.yml
+++ b/.travis.yml
@@ -136,7 +136,7 @@ matrix:
         - REPLICATION=Y
         - COVERAGE=Y
         - MCENTRAL=Y
-        - JDOC=Y
+        - RELEASE_ARTIFACTS=Y   # includes JavaDoc, source jar, etc
     - jdk: oraclejdk8
       sudo: required
       addons:
