Run checkstyle on handwritten sources not generated sources
checkstyle:check running on gen-src sources and test sources sources caused
problems when the codegen tools generated commented blocks that checkstyle
didn't like. There's no point running checkstyle on generated sources anyway,
and it only happened by accident/default because checkstyle defaults to checking
the built sources.

Fixes #1439

--- a/pgjdbc/pom.xml
+++ b/pgjdbc/pom.xml
@@ -345,6 +345,12 @@
             <failsOnError>true</failsOnError>
             <consoleOutput>true</consoleOutput>
             <includeTestSourceDirectory>true</includeTestSourceDirectory>
+            <!--
+              We want to check the handwritten sources at not generated
+              sources at the default ${project.compileSourceRoots} location.
+            -->
+            <sourceDirectories>${project.build.sourceDirectory}</sourceDirectories>
+            <testSourceDirectories>${project.build.testSourceDirectory}</testSourceDirectories>
           </configuration>
         </plugin>
         <plugin>
